<resources>
    <string name="app_name">NhamNham</string>
    <string name="titulo">Nham Nham</string>
    <string name="partida">Iniciar Partida</string>
    <string name="regras_do_jogo">Regras do Jogo</string>
    <string name="voltar">Voltar</string>
    <string name="resultado">Resultado</string>
    <string name="reiniciar">Reiniciar Partida</string>
    <string name="regras">Regras do Nham Nham</string>
    <string name="voltar_tela_inicial">Voltar à tela inicial</string>
    <string name="regra1_titulo">1. Objetivo do jogo:</string>
    <string name="regra2_titulo">2. Preparação:</string>
    <string name="regra3_titulo">3. Dinâmica do Jogo:</string>
    <string name="regra4_titulo">4. Restrições:</string>
    <string name="regra5_titulo">5. Condições de Vitória:</string>
    <string name="regra6_titulo">6. Estratégia:</string>
    <string name="regra7_titulo">7. Placar:</string>
    <string name="regra1_conteudo">O objetivo é alinhar três peças do mesmo jogador em sequência na horizontal, vertical ou diagonal.</string>
    <string name="regra2_conteudo">O jogo é para dois jogadores, alternando turnos no mesmo dispositivo. Cada jogador possui três peças de tamanhos diferentes: pequeno, médio e grande. As peças vermelhas represetnam o Jogador 1, e as azuis o Jogador 2. Por padrão o Jogador 1 começa a partida</string>
    <string name="regra3_conteudo">Cada jogador pode segurar e arrastar uma das peças e posicioná-la em um espaço vazio ou sobre outra menor, buscando alinhar três peças do mesmo jogador.</string>
    <string name="regra4_conteudo">Não é permitido posicionar uma peça menor ou do mesmo tamanho sobre outra peça.</string>
    <string name="regra5_conteudo">Vence quem alinhar três peças em sequência. Caso todas as células sejam preenchidas sem um vencedor, o jogo termina em empate.</string>
    <string name="regra6_conteudo">Pense estrategicamente para bloquear o adversário e aproveite a possibilidade de sobrepor peças maiores sobre as menores.</string>
    <string name="regra7_conteudo">Após o final de cada partida, os jogadores podem clicar no botão de Resultado, que os levará à tela que exibe o resultado do jogo e o placar acumulado. Esse placar será reiniciado automaticamente caso os jogadores retornem à tela inicial ou saiam do aplicativo Nham Nham.</string>
    <string name="desc_img_grid">Imagem das linhas verticais e horizontais de um jogo da velha</string>
    <string name="desc_img_peca_p1">Peça pequena do jogador 1</string>
    <string name="desc_img_peca_m1">Peça média do jogador 1</string>
    <string name="desc_img_peca_g1">Peça grande do jogador 1</string>
    <string name="desc_img_peca_p2">Peça pequena do jogador 2</string>
    <string name="desc_img_peca_m2">Peça média do jogador 2</string>
    <string name="desc_img_peca_g2">Peça grande do jogador 2</string>
    <string name="desc_img_bloco1">Bloco 1, linha 1 e coluna 1, do jogo da velha</string>
    <string name="desc_img_bloco2">Bloco 2, linha 1 e coluna 2, do jogo da velha</string>
    <string name="desc_img_bloco3">Bloco 3, linha 1 e coluna 1, do jogo da velha</string>
    <string name="desc_img_bloco4">Bloco 4, linha 2 e coluna 1, do jogo da velha</string>
    <string name="desc_img_bloco5">Bloco 5, linha 2 e coluna 2, do jogo da velha</string>
    <string name="desc_img_bloco6">Bloco 6, linha 2 e coluna 3, do jogo da velha</string>
    <string name="desc_img_bloco7">Bloco 7, linha 3 e coluna 1, do jogo da velha</string>
    <string name="desc_img_bloco8">Bloco 8, linha 3 e coluna 2, do jogo da velha</string>
    <string name="desc_img_bloco9">Bloco 9, linha 3 e coluna 3, do jogo da velha</string>
    <string name="cont_pecas_jogador1">Jogador 1: P=3 M=3 G=3</string>
    <string name="cont_pecas_jogador2">Jogador 2: P=3 M=3 G=3</string>
    <string name="placar">Placar: 0 x 0</string>
    <string name="quantidade_pecas">3</string>
    <string name="vez_jogador_1">Vez do Jogador 1</string>
</resources>