<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Regras">

    <TextView
        android:id="@+id/txt_titulo_regras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regras"
        android:textSize="@dimen/font_normal"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra1_titulo"
        android:textSize="@dimen/font_pequena"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        android:layout_marginEnd="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo_regras"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra1_conteudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra1_conteudo"
        android:textSize="@dimen/font_pequena"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        android:layout_marginEnd="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra2_titulo"
        android:textSize="@dimen/font_pequena"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra1_conteudo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra2_conteudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra2_conteudo"
        android:textSize="@dimen/font_pequena"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        android:layout_marginEnd="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra3_titulo"
        android:textSize="@dimen/font_pequena"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra2_conteudo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra3_conteudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra3_conteudo"
        android:textSize="@dimen/font_pequena"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        android:layout_marginEnd="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra3"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra4_titulo"
        android:textSize="@dimen/font_pequena"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra3_conteudo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra4_conteudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra4_conteudo"
        android:textSize="@dimen/font_pequena"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        android:layout_marginEnd="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra4"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra5_titulo"
        android:textSize="@dimen/font_pequena"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra4_conteudo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra5_conteudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra5_conteudo"
        android:textSize="@dimen/font_pequena"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        android:layout_marginEnd="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra5"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra6_titulo"
        android:textSize="@dimen/font_pequena"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra5_conteudo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_regra6_conteudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regra6_conteudo"
        android:textSize="@dimen/font_pequena"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/bordas_laterais"
        android:layout_marginEnd="@dimen/bordas_laterais"
        app:layout_constraintTop_toBottomOf="@id/txt_regra6"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_regras_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar_tela_inicial"
        app:cornerRadius="0dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_regra6_conteudo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>