<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_partida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partida"
        android:textSize="@dimen/font_normal"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_regras"
        />

    <Button
        android:id="@+id/btn_regras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regras_do_jogo"
        android:textSize="@dimen/font_normal"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_partida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>